# wodrag

./: .coverage  .env.example  .gitignore  AGENT_IMPROVEMENTS.md  API-PLAN.md  CLAUDE.md  CODE_REVIEW.md  Caddyfile  Caddyfile.dev  DATA_EXTRACTION.md  Dockerfile.backend  Dockerfile.caddy  Dockerfile.frontend  EXAMPLE_WORKOUT_GENERATION.md  PARADEDB_MIGRATION.md  PRODUCTION_READY.md  README-DOCKER.md  README.md  USE_CASES.md  WEBAPP.md  analyze_workout_patterns.py  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  env.example  main.py  nginx.conf  package-lock.json  pyproject.toml  test_edge_cases.py  test_enhanced_extractor.py  test_movement_parser.py  test_movement_parser_comprehensive.py  test_parser_fix.py  test_simple_parser.py  test_specific_fix.py  typescript
backlog/: config.yml
backlog/tasks/: task-1 - Refactor-embedding-service-to-use-abstract-base-class-architecture.md  task-10 - Update-search-functionality-to-use-summary-embeddings-by-default.md  task-11 - Phase-out-full-text-embeddings-after-summary-embedding-validation.md  task-2 - Create-bare-bones-question-answering-agent.md  task-3 - Extract-metadata-and-put-it-in-the-database.md  task-4 - Generate-embeddings-and-put-them-in-the-database.md  task-5 - Add-typer-dependency-and-use-it-in-scripts-instead-of-argparse.md  task-6 - Execute-SQL-migration-to-add-summary_embedding-column.md  task-7 - Re-extract-metadata-for-all-workouts-to-populate-one_sentence_summary.md  task-8 - Generate-summary-embeddings-for-all-workouts-with-populated-summaries.md  task-9 - Implement-A-B-testing-framework-for-embedding-comparison.md
data/raw/: 2025-08.html
data/reference/: exercises.txt
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css
scripts/: backup_database.sh  catchup_data.py  debug_movements.py  download_all.py  extract_and_populate_metadata.py  generate_openai_embeddings.py  generate_summary_embeddings.py  generate_workout.py  import_to_paradedb.py  init_database.py  interactive_conversation.py  load_data_to_supabase.py  recreate_processed_json.py  run_api.py  sample_and_canonicalize.py  search_summaries.py  setup_paradedb.py  setup_readonly_role.sh  test_agent_api.py  test_conversation_api.py  test_duckdb_queries.py  test_workout_generation.py  update_incremental.py  update_paradedb.py  update_workout_fields.py  update_workout_names.py  wipe_metadata.py
scripts/archive/: download_all.py  export_supabase_data.py  extract_and_populate_metadata.py  generate_openai_embeddings.py  generate_summary_embeddings.py  load_data_to_supabase.py  setup_paradedb.py  update_incremental_supabase.py  update_paradedb.py
sql/: 003_add_one_sentence_summary.sql  004_add_summary_embedding.sql  setup_supabase.sql
sql/archive/: 002_add_metadata_fields.sql
sql/paradedb/: 001_init_paradedb.sql
tests/: test_api_agent_simple.py  test_api_health.py  test_api_models.py  test_api_query.py  test_api_search.py  test_conversation_api.py  test_conversation_models.py  test_conversation_security.py  test_conversation_service.py  test_conversation_storage.py  test_conversation_validation.py  test_database_client.py  test_database_models.py  test_downloader.py  test_embedding_service.py  test_workout_repository.py  test_workout_service.py
wodrag/: __init__.py  utils.py
wodrag/agents/: __init__.py  extract_metadata.py  master.py  text_to_sql.py  workout_generator.py
wodrag/api/: __init__.py  config.py  lm_budget.py  main.py  main_fastapi.py
(+40 files in other folders)
